--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -12,3 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          repository: "zed-industries/zed"
+          ref: ${{ github.event.inputs.branch }}
+
+      - run: cargo --version
