--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -8,15 +8,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v4
         with:
           repository: "zed-industries/zed"
           ref: ${{ github.event.inputs.branch }}
-
-      - run: rustup target add x86_64-pc-windows-msvc
 
       - run: cargo build --target=x86_64-pc-windows-msvc
 
