--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -16,6 +16,6 @@ jobs:
           repository: "zed-industries/zed"
           ref: ${{ github.event.inputs.branch }}
 
-      - run: cargo build --target=x86_64-pc-windows-msvc
+      - run: cargo build
 
       - run: tree .
