--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -18,6 +18,7 @@ jobs:
 
       # Fix https://github.com/zed-industries/zed/blob/main/docs/src/development/windows.md#build-fails-path-too-long
       - run: git config --system core.longpaths true
+      - run: New-ItemProperty -Path "HKLM:\SYSTEM\CurrentControlSet\Control\FileSystem" -Name "LongPathsEnabled" -Value 1 -PropertyType DWORD -Force
 
       - run: cargo build
 
