--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -10,6 +10,9 @@ jobs:
   build:
     runs-on: windows-latest
 
+    env:
+      GH_TOKEN: ${{ github.token }}
+
     permissions:
       contents: write
 
